--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   # PostgreSQL container
   db:
@@ -74,7 +73,8 @@ services:
 
 volumes:
   redisdata: {}
-  pgdata: {}
+  pgdata:
+    external: true
 
 # The networks limit communication between Docker containers to only the ones defined in the same network
 networks:
