--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-/app/assets/builds/*
+!/app/assets/builds/application.css
 !/app/assets/builds/.keep
 
 /node_modules
