--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -2,10 +2,9 @@
 
 # Make sure RUBY_VERSION matches the Ruby version in .ruby-version and Gemfile
 ARG RUBY_VERSION=3.3.0
-FROM registry.docker.com/library/ruby:$RUBY_VERSION-slim as base
+FROM registry.docker.com/library/ruby:$RUBY_VERSION-slim AS base
 
 # Rails app lives here
-# This should be the same directory as in the docker-compose file
 WORKDIR /rails
 
 # Set environment
@@ -13,11 +12,9 @@ ENV RAILS_ENV="production" \
     BUNDLE_DEPLOYMENT="1" \
     BUNDLE_PATH="/usr/local/bundle" \
     BUNDLE_WITHOUT="development"
-#     Use this so we can download development gems in the docker container
-#     When deploying to production, add this back
 
 # Throw-away build stage to reduce size of final image
-FROM base as build
+FROM base AS build
 
 # Install packages needed to build gems and node modules
 RUN apt-get update -qq && \
@@ -31,9 +28,6 @@ RUN curl -sL https://github.com/nodenv/node-build/archive/master.tar.gz | tar xz
     /tmp/node-build-master/bin/node-build "${NODE_VERSION}" /usr/local/node && \
     npm install -g yarn@$YARN_VERSION && \
     rm -rf /tmp/node-build-master
-
-RUN npm install -g yarn@$YARN_VERSION && \
-    yarn --version  # This line will confirm the installation
 
 # Install application gems
 COPY Gemfile Gemfile.lock ./
@@ -51,12 +45,8 @@ COPY . .
 # Precompile bootsnap code for faster boot times
 RUN bundle exec bootsnap precompile app/ lib/
 
-# Precompiling assets for production without requiring secret RAILS_MASTER_KEY
-#COPY config/credentials/*.yml.enc /rails/config/credentials/
-#COPY config/master.key /rails/config/master.key
-#ARG RAILS_MASTER_KEY
-#ENV RAILS_MASTER_KEY=$RAILS_MASTER_KEY
-RUN SECRET_KEY_BASE_DUMMY=1 ./bin/rails assets:precompile
+# Precompiling assets for production
+RUN SECRET_KEY_BASE_DUMMY=1 bundle exec rails assets:precompile
 
 # Final stage for app image
 FROM base
@@ -70,10 +60,13 @@ RUN apt-get update -qq && \
 COPY --from=build /usr/local/bundle /usr/local/bundle
 COPY --from=build /rails /rails
 
-# Run and own only the runtime files as a non-root user for security
-RUN useradd rails --create-home --shell /bin/bash && \
-    chown -R rails:rails db log storage tmp
-USER rails:rails
+# Create necessary directories for Rails app
+RUN mkdir -p /rails/log /rails/storage /rails/tmp && \
+    useradd -m rails --shell /bin/bash && \
+    chown -R rails:rails /rails/log /rails/storage /rails/tmp
+
+# Change to non-root user
+USER rails
 
 # Entrypoint prepares the database.
 ENTRYPOINT ["/rails/bin/docker-entrypoint"]
@@ -81,3 +74,4 @@ ENTRYPOINT ["/rails/bin/docker-entrypoint"]
 # Start the server by default, this can be overwritten at runtime
 EXPOSE 3000
 CMD ["./bin/rails", "server"]
+
