--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   # PostgreSQL container
   db:
     image: postgres:16.3
-    ports:
-      - "5432:5432"
+      # ports:
+      #   - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
     environment:
@@ -43,7 +43,7 @@ services:
     env_file:
       - ".env"
     ports:
-      - "3000:3000"
+      - "3002:3000"
     depends_on:
       - db
       - goodjob
@@ -60,3 +60,4 @@ volumes:
 
 networks:
   backend:
+    driver: bridge
